--- a/src/main/java/frameworks_drivers/frontend/css/index.css
+++ b/src/main/java/frameworks_drivers/frontend/css/index.css
@@ -1,5 +1,5 @@
 :root {
-    --color1: #17252a; /* dark */
+    --color1: #17252a;
     --color2: #2b7a78;
     --color3: #3aafa9;
     --color4: #def2f1;
@@ -10,10 +10,21 @@ body {
     background: var(--color3);
 }
 
+h1 {
+    font-family: Bradley Hand, cursive;
+    font-size: 50px;
+    color: var(--color4);
+    text-shadow: 5px 5px var(--color1);
+}
 #all_stories {
     display: flex;
     height: 300px;
     overflow-y: scroll;
+}
+
+#all_stories {
+    border-style: solid;
+    margin-top: 20px;
 }
 
 .column {
@@ -44,16 +55,10 @@ h2 {
      position: relative;
 }
 
-.wrap {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
+
 
 .wrap {
+    position: relative;
     height: 100%;
     display: flex;
     align-items: center;
@@ -81,7 +86,7 @@ h2 {
     padding: 10px;
 }
 
-button::before {
+.button::before {
     content: '';
     border-radius: 1000px;
     min-width: calc(300px + 12px);
@@ -101,11 +106,11 @@ button::before {
     transform: translateY(-6px);
 }
 
-button:hover::before, button:focus::before {
+.button:hover::before, .button:focus::before {
     opacity: 1;
 }
 
-button::after {
+.button::after {
     content: '';
     width: 30px; height: 30px;
     border-radius: 100%;
@@ -118,7 +123,7 @@ button::after {
     animation: ring 1.5s infinite;
 }
 
-button:hover::after, button:focus::after {
+.button:hover::after, .button:focus::after {
     animation: none;
     display: none;
 }
@@ -135,3 +140,99 @@ button:hover::after, button:focus::after {
         opacity: 0;
     }
 }
+
+.button1 {
+    position: relative;
+    margin: 0.5em;
+    padding: 0.5em 1em;
+    border: 0;
+    border-radius: 0.5em;
+    background-color: var(--color4);
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+}
+
+.button1:active,
+.active {
+    top: 2px;
+    left: 1px;
+    box-shadow: none;
+}
+
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 150px;
+    height: 34px;
+}
+
+.switch input {display:none;}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--color1);
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 15px;
+    width: 15px;
+    left: 4px;
+    bottom: 10px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: var(--color2);
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px var(--color4);
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(120px);
+    -ms-transform: translateX(120px);
+    transform: translateX(120px);
+}
+
+#latest
+{
+    display: none;
+}
+
+#latest, #liked
+{
+    color: white;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    font-size: 10px;
+    font-family: Verdana, sans-serif;
+}
+
+input:checked+ .slider #latest
+{display: block;}
+
+input:checked + .slider #liked
+{display: none;}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;}
