--- a/src/main/java/frameworks_drivers/frontend/css/game.css
+++ b/src/main/java/frameworks_drivers/frontend/css/game.css
@@ -1,5 +1,6 @@
+/* main colors of the website */
 :root {
-    --color1: #17252a; /* dark */
+    --color1: #17252a;
     --color2: #2b7a78;
     --color3: #3aafa9;
     --color4: #def2f1;
@@ -22,6 +23,7 @@ body {
     flex: 60%;
 }
 
+/* story title design */
 h3 {
     font-family: 'Brush Script MT', cursive;
     font-size: 50px;
@@ -30,6 +32,7 @@ h3 {
     padding: -10px;
 }
 
+/* story box design */
 #story {
     font-family: URW Chancery L, cursive;
     border-style: solid;
@@ -39,6 +42,7 @@ h3 {
     padding: 10px;
 }
 
+/* remove dots from unordered list of players */
 ul {
     list-style-type: none;
 }
