Add Thymeleaf, update application.properties, add StoryController. Rewrite the frontend html files using thymeleaf

--- a/springapp/src/main/resources/templates/endscreen.html
+++ b/springapp/src/main/resources/templates/endscreen.html
@@ -4,8 +4,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/endscreen.css">
-    <script src="../js/endscreen.js"> </script>
+    <link rel="stylesheet" href="css/endscreen.css">
+    <script src="js/endscreen.js"> </script>
     <title>Game Summary</title>
 </head>
 
