--- a/springapp/src/main/resources/templates/game.html
+++ b/springapp/src/main/resources/templates/game.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/game.css">
-    <script src="../js/game.js"></script>
+    <link rel="stylesheet" href="css/game.css">
+    <script src="js/game.js"></script>
     <title>Game</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
                 <li>
                     <div>
                         Player 1
-                        <img style="vertical-align:middle" src="../media/pencil.png" width="20" alt="Pencil">
+                        <img style="vertical-align:middle" src="media/pencil.png" width="20" alt="Pencil">
                     </div>
                 </li>
 
@@ -45,7 +45,7 @@
 
         <!-- exit icon -->
         <div class="column" id="close_button">
-            <img style="vertical-align:middle" src="../media/exit.png" width="50" alt="Close" onclick="exit()">
+            <img style="vertical-align:middle" src="media/exit.png" width="50" alt="Close" onclick="exit()">
         </div>
     </div>
 </body>
