--- a/springapp/src/main/resources/templates/play.html
+++ b/springapp/src/main/resources/templates/play.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/play.css">
+    <link rel="stylesheet" href="css/play.css">
     <title>Play</title>
 </head>
 
 <body>
     <!-- game logo -->
     <div>
-        <img src="../media/logo.png" alt="logo" onclick="location.href = '/home'">
+        <img src="media/logo.png" alt="logo" onclick="location.href = '/home'">
     </div>
 
     <!-- form where you need to enter your name and submit it -->
