--- a/springapp/src/main/resources/templates/waiting.html
+++ b/springapp/src/main/resources/templates/waiting.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/waiting.css">
+    <link rel="stylesheet" href="css/waiting.css">
     <title>Waiting</title>
 </head>
 
