--- a/springapp/src/main/resources/templates/index.html
+++ b/springapp/src/main/resources/templates/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/index.css">
-    <script src="../js/index.js"> </script>
+    <link rel="stylesheet" href="css/index.css">
+    <script src="jss/index.js"> </script>
     <title>One Word Story</title>
 </head>
 <body>
     <div id="name_logo">
         <h1>One Word Story</h1>
-        <img src="../media/logo.png" alt="One Word Story Logo">
+        <img src="media/logo.png" alt="One Word Story Logo">
     </div>
 
     <div class="container">
