--- a/springapp/src/main/resources/static/css/play.css
+++ b/springapp/src/main/resources/static/css/play.css
@@ -1,4 +1,7 @@
-/* colors of the website */
+/* Game Page */
+
+
+/* main colors of the website */
 :root {
     --color1: #17252a;
     --color2: #2b7a78;
@@ -10,6 +13,72 @@
 body {
     background: var(--color3);
 }
+
+#two_columns {
+    display: flex;
+}
+
+#column-1 {
+    flex: 30%;
+}
+
+#story_column {
+    flex: 60%;
+}
+
+/* story title design */
+h3 {
+    font-family: 'Brush Script MT', cursive;
+    font-size: 50px;
+    text-align: center;
+    text-shadow: #2b7a78 3px 3px;
+    padding: -10px;
+}
+
+/* story box design */
+#story {
+    font-family: URW Chancery L, cursive;
+    border-style: solid;
+    height: 300px;
+    overflow-y:scroll;
+    background-color: var(--color4);
+    padding: 10px;
+}
+
+/* remove dots from unordered list of players */
+ul {
+    list-style-type: none;
+}
+
+#game_page {
+    display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+/* ------------ Play Page -------------- */
+
+
+/* colors of the website */
+:root {
+    --color1: #17252a;
+    --color2: #2b7a78;
+    --color3: #3aafa9;
+    --color4: #def2f1;
+    --color5: #feffff;
+}
+
+/*body {
+    background: var(--color3);
+}*/
 
 form {
     position: center;
@@ -112,4 +181,109 @@ input:invalid:required {
         height: 150px;
         opacity: 0;
     }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/*-------- WAITING PAGE CSS ----------- */
+
+/*body{
+    background: #17252a;
+}*/
+
+.center{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    min-height: 60vh;
+}
+
+.center2{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    min-height: 10vh;
+}
+
+.ring{
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    animation: ring 2s infinite;
+}
+
+@keyframes ring {
+    0%{
+        transform: rotate(0deg);
+        box-shadow: 1px 5px 2px #2b7a78;
+    }
+    50%{
+        transform: rotate(180deg);
+        box-shadow: 1px 5px 2px #3aafa9;
+    }
+    100%{
+        transform: rotate(360deg);
+        box-shadow: 1px 5px 2px #def2f1;
+    }
+}
+
+.ring:before{
+    position: absolute;
+    content: '';
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    box-shadow: 0 0 5px rgba(225, 225, 225, .3);
+}
+
+span{
+    color: #feffff;
+    font-size: 20px;
+    font-family: Lobster;
+    animation: text 3s ease-in-out infinite;
+}
+
+@keyframes text {
+    50%{
+        color: #17252a;
+    }
+}
+
+.button {
+    padding: 16px 32px;
+    display: inline-block;
+    font-size: 16px;
+    font-family: Lobster;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.button1 {
+    background-color: white;
+    color: #2b7a78;
+    border: 2px solid #17252a;
+    margin: auto;
+}
+
+.button1:hover {
+    background-color: #17252a;
+    color: #def2f1;
+}
+
+#waiting_page {
+    display: none;
 }
