--- a/springapp/src/main/resources/templates/story.html
+++ b/springapp/src/main/resources/templates/story.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <img src="media/logo.png" alt="One Word Story Logo" width="50px" height="50px"></a>
+    <img src="media/logo.png" alt="One Word Story Logo" width="50px" height="50px" onclick="location.href = '/'"></a>
 
     <div class="row">
 
@@ -28,7 +28,7 @@
             <br><br>
             <h3>< Vote for Title ></h3>
             <div id="all_votes">
-                <form method="POST" th:action="@{upvote-suggestion/suggestion/id(id = ${suggestion.id},
+                <form method="POST" th:action="@{upvote-suggestion/suggestion/id(id = ${suggestion.getSuggestedTitle()},
                 storyId = ${storyId})}"
                         th:each="suggestion: ${suggestions}" class="titles" id="title1">
                     <p th:text="${suggestion.suggestedTitle}"></p>
@@ -52,6 +52,7 @@
                     <input type="submit" onclick="addTitle()" value="Submit">
                 </form>
             </div>
+            <p style="color:darkred" th:if="${isfailTitle}" th:text="${message}"> </p>
         </div>
 
         <div class="column2">
@@ -92,6 +93,7 @@
                     <input type="submit" onclick="myFunction()" value="Submit">
                 </form>
             </div>
+            <p style="color:darkred" th:if="${isfail}" th:text="${message}"> </p>
 
         </div>
 
