Refactor Spring, Fix bug

--- a/springapp/src/main/resources/templates/play.html
+++ b/springapp/src/main/resources/templates/play.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+
+<!------------------------------------------------ PLAY PAGE -->
     <div id="play_page">
         <!-- game logo -->
         <div>
@@ -28,7 +30,7 @@
     </div>
 
 
-
+<!------------------------------------------------ WAITING PAGE -->
     <div id="waiting_page">
         <div class="center">
             <div class="ring">
@@ -42,7 +44,7 @@
     </div>
 
 
-
+<!------------------------------------------------ GAME PAGE -->
     <div id="game_page">
         <div id="two_columns">
             <div id="column-1" class="column">
