--- a/springapp/src/main/resources/templates/play.html
+++ b/springapp/src/main/resources/templates/play.html
@@ -67,7 +67,7 @@
 
             <!-- story -->
             <div id="story_column" class="column">
-                <h3>Your Story</h3>
+                <h3 class="story-title" >Your Story</h3>
                 <div id="story">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -83,6 +83,8 @@
 
 </body>
 
+<script src="js/libs/jquery.js"> </script>
+<script src="js/libs/sweetalerts2.js"></script>
 <script src="js/play.js"> </script>
 
 </html>
