--- a/springapp/src/main/resources/static/css/play.css
+++ b/springapp/src/main/resources/static/css/play.css
@@ -58,7 +58,21 @@ ul {
     display: none;
 }
 
+/*---------------------------- MINI LOADING ICON*/
+.loader {
+    border: 4px solid #f3f3f3; /* Light grey */
+    border-top: 4px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    animation: spin 2s linear infinite;
+    margin-right: 10px;
+}
 
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
 
 
 
@@ -70,6 +84,11 @@ ul {
 
 /* ------------ Play Page -------------- */
 
+#load-icon-container {
+    align-content: center;
+    justify-content: center;
+    display: flex;
+}
 
 /* colors of the website */
 :root {
@@ -83,6 +102,10 @@ ul {
 /*body {
     background: var(--color3);
 }*/
+
+#name {
+    margin: auto;
+}
 
 form {
     position: center;
