--- a/springapp/src/main/resources/templates/play.html
+++ b/springapp/src/main/resources/templates/play.html
@@ -26,6 +26,10 @@
                 <button id="play_button" class="button">Play</button>
             </div>
         </div>
+        <div style="display: none" id="load-icon-container">
+            <div class="loader"></div>
+            <span> Connecting to server... </span>
+        </div>
 
     </div>
 
