--- a/springapp/src/main/resources/templates/play.html
+++ b/springapp/src/main/resources/templates/play.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
     <link rel="stylesheet" href="css/play.css">
     <title>Play</title>
 </head>
@@ -11,24 +12,26 @@
 <!------------------------------------------------ PLAY PAGE -->
     <div id="play_page">
         <!-- game logo -->
-        <div>
+        <div id="play-logo-container">
             <img src="media/logo.png" alt="logo" onclick="location.href = '/'">
         </div>
 
         <!-- form where you need to enter your name and submit it -->
         <!-- name input -->
-        <label for="name">Enter your name:</label>
-        <input type="text" id="name" name="name" required><br><br>
+        <div id="play-form-container">
+            <label for="name">Enter your name:</label>
+            <input type="text" id="name" name="name" required><br><br>
+        </div>
 
         <!-- button "Play" -->
-        <div class="container">
-            <div class="wrap">
-                <button id="play_button" class="button">Play</button>
+        <div class="play-button-container">
+            <div class="play-button-wrap">
+                <button id="play-button" class="button">Play</button>
             </div>
         </div>
         <div style="display: none" id="load-icon-container">
             <div class="loader"></div>
-            <span> Connecting to server... </span>
+            <span class="flashing-text"> Connecting to server... </span>
         </div>
 
     </div>
@@ -40,7 +43,7 @@
             <div class="ring">
 
             </div>
-            <span> Looking for lobby... </span>
+            <span class="flashing-text"> Looking for lobby... </span>
         </div>
         <div class="center2">
             <button id="cancel-button" class="button button1"> Cancel </button>
@@ -53,35 +56,39 @@
         <div id="two_columns">
             <div id="column-1" class="column">
                 <!-- list of players -->
-                <ul id="players-list">
 
-                </ul>
+                <div id="players-list-container">
+                    <h3 id="players-list-title" class="game-fancy-title">Authors</h3>
 
-                <!-- submit a word -->
-                <div class="column">
-                    <label for="word">Word:</label>
-                    <input type="text" id="word" name="word"><br><br>
-                    <div>
-                        <button type="button" onClick="submitWord()"> Submit </button>
-                        <span id="seconds-left">0s</span>
+                    <div id="players-list">
+
                     </div>
                 </div>
-                <span id="result"></span>
             </div>
 
             <!-- story -->
             <div id="story_column" class="column">
-                <h3 class="story-title" >Your Story</h3>
+                <h3 class="story-title game-fancy-title" >Your Story</h3>
                 <div id="story">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Lorem ipsum dolor sit amet
                 </div>
             </div>
 
             <!-- exit icon -->
             <div class="column" id="close_button">
-                <img style="vertical-align:middle" src="media/exit.png" width="50" alt="Close" onclick="exit()">
+                <img id="exit-game-button" style="vertical-align:middle" src="media/exit.png" width="50" alt="Close">
             </div>
+        </div>
+
+        <!-- submit a word -->
+        <div id="submit-word-container">
+            <input placeholder="Enter a word..." type="text" id="word" name="word">
+            <button id="submit-word-button" type="button"> Submit </button>
+            <span id="seconds-left" class="flashing-text">0s</span>
+        </div>
+
+        <div id="submit-word-error">
+            <i class="fas fa-exclamation-circle"></i> <span id="submit-word-error-text"> Error </span>
         </div>
     </div>
 
