Fix GameEndPlayerDisplayData JSON parsing

--- a/springapp/src/main/resources/templates/endscreen.html
+++ b/springapp/src/main/resources/templates/endscreen.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/endscreen.css">
-    <script src="js/endscreen.js"> </script>
+
     <title>Game Summary</title>
 </head>
 
@@ -37,9 +37,12 @@
     <br>
 
     <div class="center">
-        <button class="button button1" onclick="window.location.href='https://w3docs.com';"> Continue </button>
+        <button class="button button1" onclick="window.location.href='/';"> Continue </button>
     </div>
 
 </body>
+
+<script src="js/libs/jquery.js"> </script>
+<script src="js/endscreen.js"> </script>
 
 </html>
