--- a/springapp/src/main/resources/templates/endscreen.html
+++ b/springapp/src/main/resources/templates/endscreen.html
@@ -16,17 +16,17 @@
     <div class="row">
 
         <div class="column">
-            <div class="container1">
-                <b>Average Turn Duration: </b><br>
-                <b>Words Contributed: </b><br>
-                <b>Words <3 letters: </b><br>
-                <b>Words >4 letters: </b><br>
-                <b>Most Common Used Word: </b><br>
+            <div class="container">
+                <b th:text="'Average Turn Duration:'"> </b> <br>
+                <b th:text="'Words Contributed:'"> </b> <br>
+                <b th:text="'Words <3 letters:'"> </b> <br>
+                <b th:text="'Words >4 letters:'"> </b> <br>
+                <b th:text="'Most Common Used Word:'"> </b> <br>
             </div>
         </div>
 
         <div class="column">
-            <div class="container2">
+            <div class="container">
                 <b>Letters Used</b><br>
 
             </div>
