Finish statistics functionality

--- a/springapp/src/main/resources/templates/endscreen.html
+++ b/springapp/src/main/resources/templates/endscreen.html
@@ -15,29 +15,12 @@
 
     <div class="row">
 
-        <div class="column">
-            <div class="container">
-                <b th:text="'Average Turn Duration:'"> </b> <br>
-                <b th:text="'Words Contributed:'"> </b> <br>
-                <b th:text="'Words <3 letters:'"> </b> <br>
-                <b th:text="'Words >4 letters:'"> </b> <br>
-                <b th:text="'Most Common Used Word:'"> </b> <br>
-            </div>
-        </div>
-
-        <div class="column">
-            <div class="container">
-                <b>Letters Used</b><br>
-
-            </div>
-        </div>
-
     </div>
 
     <br>
 
     <div class="center">
-        <button class="button button1" onclick="window.location.href='/';"> Continue </button>
+        <button class="button button1" onclick="window.location.href='/play';"> Continue </button>
     </div>
 
 </body>
