--- a/springapp/src/main/resources/static/css/endscreen.css
+++ b/springapp/src/main/resources/static/css/endscreen.css
@@ -26,6 +26,10 @@ h1 {text-align: center;
     height: auto;
 }
 
+.stat-title {
+    margin-bottom: 1px;
+}
+
 .button {
     padding: 16px 32px;
     text-align: center;
