--- a/springapp/src/main/resources/templates/index.html
+++ b/springapp/src/main/resources/templates/index.html
@@ -36,13 +36,13 @@
 
         <div class="column">
             <div th:each="story: ${stories}" class="story" id="story1">
-                <a th:href="@{/story-{id}(id = ${story.getId()})}">
-                    <h2 th:text="${story.getTitle()}" ></h2>
+                <a th:href="@{/story-{id}(id = ${story.id()})}">
+                    <h2 th:text="${story.title()}" ></h2>
                 </a>
-                <span style="color:darkblue" th:text="'&#9829; ' + ${story.getLikes()}"> </span>
-                <p th:text="'Published: ' + ${story.getDateString()}"></p>
-                <h4>Authors: <span th:text="${story.getAuthorString()}" > </span> </h4>
-                <p th:text="${story.getContent()}">  </p>
+                <span style="color:darkblue" th:text="'&#9829; ' + ${story.likes()}"> </span>
+                <p th:text="'Published: ' + ${story.publishDateString()}"></p>
+                <h4>Authors: <span th:text="${story.authorString()}" > </span> </h4>
+                <p th:text="${story.content()}">  </p>
             </div>
         </div>
 
