--- a/springapp/src/main/resources/templates/story.html
+++ b/springapp/src/main/resources/templates/story.html
@@ -20,7 +20,7 @@
             <br>
             <h3> Like the Story </h3>
             <div class="center">
-                <form method="POST" th:action="@{like/story/id(id = ${story.id()})}">
+                <form method="POST" th:action="@{like/story/{id}(id = ${story.id()})}">
                     <Button type="submit" onclick="Toggle1()" id="btn1" class="btn"><i class="fas fa-heart"></i></Button>
                 </form>
             </div>
@@ -28,13 +28,13 @@
             <br><br>
             <h3>< Vote for Title ></h3>
             <div id="all_votes">
-                <form method="POST" th:action="@{upvote-suggestion/suggestion/id(id = ${suggestion.getSuggestedTitle()},
+                <form method="POST" th:action="@{upvote-suggestion/suggestion(id = ${suggestion.title()},
                 storyId = ${story.id()})}"
                         th:each="suggestion: ${suggestions}" class="titles" id="title1">
-                    <p th:text="${suggestion.suggestedTitle}"></p>
+                    <p th:text="${suggestion.title()}"></p>
                     <br>
                     <button type="submit" onclick="addVote(this)">Upvote</button>
-                    <span th:text="${suggestion.count}" class="count"></span>
+                    <span th:text="${suggestion.numUpvotes()}" class="count"></span>
                 </form>
                 <div th:if="${#lists.isEmpty(suggestions)}" class="all_votes">
                     <div class="titles">
@@ -46,10 +46,10 @@
             <br>
 
             <div class="center">
-                <form method="POST" th:action="@{suggest-title/story/id(id = ${story.id()})}" id="add_title">
-                    <input id="title_name" type="text" th:value="${suggestedTitle}" name="suggestedTitle"
-                           placeholder="Suggest your own...">
-                    <input type="submit" onclick="addTitle()" value="Submit">
+                <form method="POST" th:object="${titleBuilder}"
+                      th:action="@{suggest-title/story/{id}(id = ${story.id()})}" id="add_title">
+                    <input th:field="*{title}" id="title_name" type="text" name="suggestedTitle" placeholder="Suggest your own...">
+                    <input type="submit" value="Submit">
                 </form>
             </div>
             <p style="color:darkred" th:if="${isfailTitle}" th:text="${message}"> </p>
@@ -70,8 +70,8 @@
                 <div th:each="comment: ${comments}" class="comments" id="comment1">
                     <img src="media/user.jpeg" class="user_profile" alt="not available">
                     <p  class="comment">
-                        <b th:text="${comment.username}"></b> <br>
-                    <p th:text="${comment.comment}"></p>
+                        <b th:text="${comment.displayName()}"></b> <br>
+                    <p th:text="${comment.content()}"></p>
                     </p>
                 </div>
                 <div th:if="${#lists.isEmpty(comments)}" class="comments">
@@ -84,13 +84,13 @@
             <h3>Leave a Comment</h3>
 
             <div class="center">
-                <form method="POST" th:object="${comment}"
-                      th:action="@{comment/story/id(id = ${story.id()})}" id="comment-story-form">
+                <form method="POST" th:object="${commentBuilder}"
+                      th:action="@{comment/story/{id}(id = ${story.id()})}" id="comment-story-form">
                     <!--The placeholder works only when the tag is on one line !-->
-                    <textarea placeholder="Your comment" th:field="${comment.comment}" id ="userComment" rows="5" cols="42" name="comment"></textarea>
+                    <textarea placeholder="Your comment" th:field="*{content}" id ="userComment" rows="5" cols="42" name="comment"></textarea>
                     <br>
-                    Comment as Guest: <input id="userName" th:field="${comment.username}" type="text" name="guest_name" placeholder="Enter a Guest Name...">
-                    <input type="submit" onclick="myFunction()" value="Submit">
+                    Comment as Guest: <input id="userName" th:field="*{displayName}" type="text" name="guest_name" placeholder="Enter a Guest Name...">
+                    <input type="submit" value="Submit">
                 </form>
             </div>
             <p style="color:darkred" th:if="${isfail}" th:text="${message}"> </p>
