--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/index.css">
-    <script src="js/index.js"> </script>
     <title>One Word Story</title>
 </head>
 
 <body>
     <div id="name_logo">
         <h1>One Word Story</h1>
-        <img src="media/logo.png" alt="One Word Story Logo">
+        <!-- TODO: change logo background -->
+        <!-- <img src="media/logo.png" alt="One Word Story Logo"> -->
     </div>
 
     <div class="container">
@@ -31,22 +31,22 @@
         </label>
     </div>
 
+    <!-- temporary div for all stories before js script acts -->
     <div id="all_stories">
-
-
-        <div class="column">
-            <div th:each="story: ${stories}" class="story" id="story1">
-                <a th:href="@{/story-{id}(id = ${story.id()})}">
-                    <h2 th:text="${story.title()}" ></h2>
-                </a>
-                <span style="color:darkblue" th:text="'&#9829; ' + ${story.likes()}"> </span>
-                <p th:text="'Published: ' + ${story.publishDateString()}"></p>
-                <h4>Authors: <span th:text="${story.authorString()}" > </span> </h4>
-                <p th:text="${story.content()}">  </p>
-            </div>
+        <div th:each="story: ${stories}" class="story" id="story1">
+            <a th:href="@{/story-{id}(id = ${story.id()})}">
+                <h2 th:text="${story.title()}" ></h2>
+            </a>
+            <span th:text="'&#9829; ' + ${story.likes()}"> </span>
+            <p th:text="'Published: ' + ${story.publishDateString()}"></p>
+            <h4>Authors: <span th:text="${story.authorString()}" > </span> </h4>
+            <p th:text="${story.content()}">  </p>
         </div>
-
     </div>
 
+    <!-- display two stories in a row-->
+    <div id="allStoriesByTwo"></div>
+
+    <script src="js/index.js"> </script>
 </body>
 </html>
