fix class of heart, so it is displayed now

--- a/src/main/resources/templates/story.html
+++ b/src/main/resources/templates/story.html
@@ -21,7 +21,7 @@
             <h3> Like the Story </h3>
             <div class="center">
                 <form method="POST" th:action="@{like/story/{id}(id = ${story.id()})}">
-                    <Button type="submit" onclick="Toggle1()" id="btn1" class="btn"><i class="fas fa-heart"></i></Button>
+                    <Button type="submit" onclick="Toggle1()" id="btn1" class="btn"><i class="fa fa-heart"></i></Button>
                 </form>
             </div>
 
