move script with js to the end of the body

--- a/src/main/resources/templates/story.html
+++ b/src/main/resources/templates/story.html
@@ -5,8 +5,6 @@
 
 <head>
     <meta charset="UTF-8">
-
-    <script src="js/story.js"> </script>
     <script src="https://kit.fontawesome.com/f6dcf461c1.js" crossorigin="anonymous"></script>
     <title th:text="${story.title()}"></title>
 </head>
@@ -21,7 +19,7 @@
             <h3> Like the Story </h3>
             <div class="center">
                 <form method="POST" th:action="@{like/story/{id}(id = ${story.id()})}">
-                    <Button type="submit" onclick="Toggle1()" id="btn1" class="btn"><i class="fa fa-heart"></i></Button>
+                    <Button type="submit" onclick="changeHeartColor()" id="btn1" class="btn"><i class="fa fa-heart"></i></Button>
                 </form>
             </div>
 
@@ -98,6 +96,8 @@
         </div>
 
     </div>
+
+    <script src="js/story.js"> </script>
 
 </body>
 
